Readded css refs

--- a/5051/Views/Student/Avatar.cshtml
+++ b/5051/Views/Student/Avatar.cshtml
@@ -3,6 +3,9 @@
     ViewBag.Title = "Avatar";
 }
 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
+
 <div class="background">
     <div class="row text-center">
         <h1 class="student-header" align="center">Avatar name</h1>
@@ -13,7 +16,7 @@
             <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart"></i></a>
             <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user"></i></a>
             <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
-</div>
+        </div>
         <img src="~/Content/img/AvatarMockup_final.png" width="800" class="img-responsive" id="wireframe-student" />
     </div>
 </div>
