--- a/5051/Views/Student/Community.cshtml
+++ b/5051/Views/Student/Community.cshtml
@@ -3,10 +3,13 @@
     ViewBag.Title = "Community";
 }
 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
+
 <div class="background" id="community">
     <div class="row text-center">
         <h1 class="student-header" align="center">Community</h1>
-        
+
         <div id="studentnavicons">
             <a href="~/Student/Default" title="Store"><i class="fas fa-store-alt"></i></a>
             <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs"></i></a>
