Admin css reference

--- a/5051/Views/Admin/Index.cshtml
+++ b/5051/Views/Admin/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
 }
 
-
+<link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
     <div id="background3">
         <div class="row text-center">
