--- a/5051/Views/Student/Community.cshtml
+++ b/5051/Views/Student/Community.cshtml
@@ -5,6 +5,7 @@
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
+<link rel="stylesheet" type="text/css" href="~/Content/Student.css" />
 
 <div class="background" id="community">
     <div class="row text-center">
