--- a/5051/Views/Portal/Login.cshtml
+++ b/5051/Views/Portal/Login.cshtml
@@ -2,6 +2,8 @@
     ViewBag.Title = "Student Login";
 }
 
+<link rel="stylesheet" type="text/css" href="~/Content/Student.css" />
+<link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
     <div class="background">
         <div class="row text-center">
