added student css to index

--- a/5051/Views/Portal/Index.cshtml
+++ b/5051/Views/Portal/Index.cshtml
@@ -5,6 +5,7 @@
 
 
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
+<link rel="stylesheet" type="text/css" href="~/Content/Student.css" />
    
 
 <div class="background">
