--- a/5051/Views/Student/Avatar.cshtml
+++ b/5051/Views/Student/Avatar.cshtml
@@ -9,7 +9,7 @@
 
 <div class="background">
     <div class="row text-center">
-        <h1 class="student-header" align="center">Avatar name</h1>
+        <h1 class="student-header" align="center">Create Avatar</h1>
 
         <div id="studentnavicons">
             <a href="~/Student/Default" title="Store"><i class="fas fa-store-alt"></i></a>
@@ -18,6 +18,8 @@
             <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user"></i></a>
             <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
         </div>
-        <img src="~/Content/img/AvatarMockup_final.png" width="800" class="img-responsive" id="wireframe-student" />
+      
+       <img src="~/Content/img/AvatarMockup_final.png" width="800" class="avatar-block" id="wireframe-student" />
+     
     </div>
 </div>
