--- a/5051/Views/Student/Avatar.cshtml
+++ b/5051/Views/Student/Avatar.cshtml
@@ -19,7 +19,10 @@
             <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
         </div>
       
-       <img src="~/Content/img/AvatarMockup_final.png" width="800" class="avatar-block" id="wireframe-student" />
+        <div class="avatar-block">
+            <img src="~/Content/img/AvatarMockup_final.png" width="800" class="img-responsive" id="wireframe-student" />
+        </div>
+       
      
     </div>
 </div>
