Added styling to Student.css for Report page, add margin to Index for portal and admin

--- a/5051/Views/Admin/Index.cshtml
+++ b/5051/Views/Admin/Index.cshtml
@@ -12,7 +12,7 @@
             <div class="col-md-6">
                 <div>
                     <a href="~/Admin/Manage">
-                        <img src="~/Content/img/defaultReportIcon.png" class="center">
+                        <img style="margin-top: 80px;" src="~/Content/img/defaultReportIcon.png" class="center">
                         <br />
                         <span style="display: block; text-align: center; font-size:2.5em; color: #fff">
                             Manage Students
@@ -23,7 +23,7 @@
             </div>
             <div class="col-md-6">
                 <a href="~/Admin/Calendar">
-                    <img src="~/Content/img/defaultCalendarIcon.png" class="center">
+                    <img style="margin-top: 80px;" src="~/Content/img/defaultCalendarIcon.png" class="center">
                     <br />
                     <span style="display: block; text-align: center; font-size:2.5em; color: #fff">
                         Override Calendar
