--- a/5051/Views/Portal/Index.cshtml
+++ b/5051/Views/Portal/Index.cshtml
@@ -14,9 +14,9 @@
         <div class="col-md-6">
             <div>
                 <a href="~/Student/Report">
-                    <img src="~/Content/img/ReportPicture.png" class="center">
+                    <img style="margin-top: 80px" src="~/Content/img/ReportPicture.png" class="center">
                     <br />
-                    <span style="display: block; text-align: center; font-size:2.5em; color: #fff">
+                    <span style="display: block; text-align: center; font-size:2.5em; color: #fff;">
                         View Reports
                     </span>
                 </a>
@@ -25,9 +25,9 @@
         </div>
         <div class="col-md-6">
             <a href="~/Student/Default">
-                <img src="~/Content/img/GameIcon.png" class="center">
+                <img style="margin-top: 80px;" src="~/Content/img/GameIcon.png" class="center">
                 <br />
-                <span style="display: block; text-align: center; font-size:2.5em; color: #fff">
+                <span style="display: block; text-align: center; font-size:2.5em; color: #fff;">
                     Play Game
                 </span>
             </a>
