--- a/5051/Views/Student/Avatar.cshtml
+++ b/5051/Views/Student/Avatar.cshtml
@@ -20,7 +20,7 @@
         </div>
       
         <div class="avatar-block">
-            <img src="~/Content/img/AvatarMockup.png" width="800" class="img-responsive" id="wireframe-student" />
+            <img src="~/Content/img/AvatarMockup.png" onclick="this.src='/Content/img/AvatarMockUp2.png'" width="800" class="img-responsive" id="wireframe-student" />
         </div>
        
      
