Change img src in market and market after

--- a/5051/Views/Student/Default.cshtml
+++ b/5051/Views/Student/Default.cshtml
@@ -19,5 +19,5 @@
             <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
         </div>
     </div>
-    <img src="~/Content/img/storeMockup.png" class="img-responsive" />
+    <img src="~/Content/img/Student Market/Market_demo1.png" class="img-responsive" />
 </div>
