--- a/5051/Views/Student/Market.cshtml
+++ b/5051/Views/Student/Market.cshtml
@@ -30,7 +30,7 @@
     <div class="row text-center">
         <h1 class="student-header" align="center">Marketplace</h1>
         <div id="studentnavicons">
-            <a href="~/Student/Default" title="Store"><i class="fas fa-store-alt"></i></a>
+            <a href="~/Student/MarketAfter" title="Store"><i class="fas fa-store-alt"></i></a>
             <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs"></i></a>
             <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart"></i></a>
             <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user"></i></a>
