--- a/5051/Views/Student/MarketAfter.cshtml
+++ b/5051/Views/Student/MarketAfter.cshtml
@@ -1,55 +1,23 @@
 ﻿
 @{
-    ViewBag.Title = "Marketplace";
+
+    ViewBag.Title = "Game Portal";
 }
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
-
+<link rel="stylesheet" type="text/css" href="~/Content/Student.css" />
 
 <div class="background">
     <div class="row text-center">
-        <h1 class="student-header" align="center">Marketplace</h1>
-        <div class="row text-center">
-            <div id="studentnavicons">
-                <a href="~/Student/Default" title="Store"><i class="fas fa-store-alt" style="color:#7a553b"></i></a>
-                <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs" style="color:#7a553b"></i></a>
-                <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart" style="color:#7a553b"></i></a>
-                <a href="~/Student/Accomplishments" title="Yep, I did this"><i class="fas fa-trophy" style="color:#7a553b"></i></a>
-                <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user" style="color:#7a553b"></i></a>
-                <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt" style="color:#7a553b"></i></a>
-            </div>
-        </div>
-        </div>
-
-    <div class="row">
-        <div class="col-md-12">
-            
-                <div class="boxed" align="center">
-                    <font size="10">Points: 150</font>
-                </div>
-                <img src="~/Content/img/wireframe_market.png" width="800" class="img-responsive" id="wireframe-student" />
-
-                <div class="col-md-4">
-                    <div style="float: right; margin-top:-70px;" align="center">
-                        @Html.ActionLink("Sell", "Default", "Student", null, new { @class = "btn btn-primary" })
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div style="float:right; margin-top:-70px;" align="center">
-                        @Html.ActionLink("Buy", "Default", "Student", null, new { @class = "btn btn-primary" })
-                    </div>
-                </div>
+        <h1 class="student-header" align="center">Nhu's Moo Shoppe</h1>
+        <div id="studentnavicons">
+            <a href="~/Student/Default" title="Store"><i class="fas fa-store-alt"></i></a>
+            <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs"></i></a>
+            <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart"></i></a>
+            <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user"></i></a>
+            <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
         </div>
     </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
+    <img src="~/Content/img/Student Market/Market_demo6.png" class="img-responsive" />
+</div>
