--- a/5051/Views/Student/Market.cshtml
+++ b/5051/Views/Student/Market.cshtml
@@ -14,11 +14,11 @@
         $('#wireframe-student').on('click', function () {
             var img_src = $(this).attr('alt');
             if (img_src == 'image1') {
-                $(this).attr({ src: '/Content/img/Student Market/Market_demo3.png', alt: 'image2' });
+                $(this).attr({ src: '/Content/img/Student Market/Market_demo3Copy.png', alt: 'image2' });
             } else if (img_src == 'image2') {
-                $(this).attr({ src: '/Content/img/Student Market/Market_demo4.png', alt: 'image3' });
+                $(this).attr({ src: '/Content/img/Student Market/Market_demo4Copy.png', alt: 'image3' });
             } else if (img_src == 'image3') {
-                $(this).attr({ src: '/Content/img/Student Market/Market_demo5.png', alt: 'image4' });
+                $(this).attr({ src: '/Content/img/Student Market/Market_demo5Copy.png', alt: 'image4' });
             } else {
                 /* carry on..... */
             }
@@ -40,13 +40,10 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="boxed" align="center">
-                <font size="10">Points: 150</font>
-            </div>
-
+ 
             <div class="row">
                 <div class="col-md-12">
-                    <img id="wireframe-student" src="/Content/img/Student Market/Market_demo2.png" width="1000" class="img-responsive" alt="image1" />
+                    <img id="wireframe-student" src="~/Content/img/Student Market/Market_demo2Copy.png" width="1000" class="img-responsive" alt="image1" />
                 </div>
             </div>
         </div>
