--- a/5051/Content/Student.css
+++ b/5051/Content/Student.css
@@ -117,6 +117,8 @@
     position: center;
     display: inline-block;
     background-color: #fff;
+    border: 1px solid white;
+    border-radius: 25px;
     opacity: 0.7;
     padding: 10px;
     margin-top: 10px;
