--- a/5051/Views/Admin/Manage.cshtml
+++ b/5051/Views/Admin/Manage.cshtml
@@ -7,7 +7,7 @@ ViewBag.Title = "Reports";
 
 <div id="background3">
 <div class="container-full">
-    <div class= "col-md-12 col-md-offset-2">
+    <div class= "col-md-12">
         <!--Support print button-->
         <script>
             function Print() {
@@ -16,7 +16,7 @@ ViewBag.Title = "Reports";
 
         </script>
 
-        <div class="col-md-12">
+        <div id="adminHeader" class="col-md-12">
             <div id="Pgtitle" class="col-md-3">
                 Manage Students
             </div>
