--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -52,7 +52,7 @@
 
                 <div id="Stats" class="w3-container city" style="display:none">
                     <h3>Stats</h3>
-                    <p>Tokyo is the capital of Japan.</p>
+                    <!--  Winona, please add code for Accomplishments under this comment-->
                 </div>
             </div>
 
