--- a/5051/Views/Admin/Calendar.cshtml
+++ b/5051/Views/Admin/Calendar.cshtml
@@ -23,11 +23,11 @@
 <div id="background3">
     <div class="row text-center">
         <div class="container">
-            <div style="float:right;" align="center">
+            <div id="mainMenuCal">
                 @Html.ActionLink("Main Menu", "Index", "Admin", null, new { @class = "btn btn-primary" })
             </div>
-            <h2>Welcome to Admin Calendar</h2>
-            <p>Click on calendar to override days to take or to not take attendance
+            <h2 id="mainAdminTitleCal">Welcome to Admin Calendar</h2>
+            <p id="mainAdminTitleCal">Click on calendar to override days to take or to not take attendance
                 
             </p>
             <br />
