--- a/5051/Views/Admin/Index.cshtml
+++ b/5051/Views/Admin/Index.cshtml
@@ -7,7 +7,7 @@
 
     <div id="background3">
         <div class="row text-center">
-            <h2 style="color: #fff">WELCOME TO ADMIN PORTAL</h2>
+            <h2 id="mainAdminTitle">WELCOME TO ADMIN PORTAL</h2>
 
             <div class="col-md-6">
                 <div>
