--- a/5051/Views/Kiosk/Index.cshtml
+++ b/5051/Views/Kiosk/Index.cshtml
@@ -23,6 +23,7 @@
 </script>
 
     <div class="container-fluid" id="kioskbackground">
+        <div class="row text-center"><h1>Studnet Kiosk</h1></div>
         <div class="row">
             <div class="col-md-8 col-md-offset-2 col-sm-offset-0 col-sm-12">
                 <div class="row">
