--- a/5051/Views/Shared/_Layout.cshtml
+++ b/5051/Views/Shared/_Layout.cshtml
@@ -20,9 +20,8 @@
             <div class="container-full">
 
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bm-navbar" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
+                <div class="navbar navbar-inverse navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bm-navbar">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
