--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -37,8 +37,8 @@
                     </div>
 
                     <div class="w3-content w3-display-container">
-                        <div class="slideButtonLeft"><button class="w3-button w3-gray w3-display-left" onclick="plusDivs(-1)">&#10094;</button></div>
-                        <div class="slideButtonRight"><button class="w3-button w3-gray w3-display-right" onclick="plusDivs(1)">&#10095;</button></div>
+                        <div class="slideButtonLeft"><button class="w3-button w3-white w3-display-left" onclick="plusDivs(-1)">&#10094;</button></div>
+                        <div class="slideButtonRight"><button class="w3-button w3-white w3-display-right" onclick="plusDivs(1)">&#10095;</button></div>
                         <div class="student-report"><img class="mySlides" src="~/Content/img/studentApril.png" id="wireframe-student" /></div>
                         <div class="student-report"><img class="mySlides" src="~/Content/img/studentMay.png" id="wireframe-student" /></div>
                         <div class="student-report"><img class="mySlides" src="~/Content/img/studentMarch.png" id="wireframe-student" /></div>
@@ -46,7 +46,9 @@
                 </div>
             </div>
                 <div id="Year" class="w3-container city" style="display:none">
-                    <h3>Year</h3>
+                    <div class="span5">
+                        <h3>Year</h3>
+                    </div>
 
                 </div>
 
