--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -28,7 +28,7 @@
             <div class="w3-bar w3-pale-yellow">
                 <button class="w3-bar-item w3-button" onclick="openTab('Month')">Month</button>
                 <button class="w3-bar-item w3-button" onclick="openTab('Year')">Year</button>
-                <button class="w3-bar-item w3-button" onclick="openTab('Stats')">Stats</button>
+                <button class="w3-bar-item w3-button" onclick="openTab('Stats')">My Shops</button>
             </div>
             <div class="col-md-12">
                 <div id="Month" class="w3-container city">
@@ -53,10 +53,12 @@
                 </div>
 
                 <div id="Stats" class="w3-container city" style="display:none">
-                    <h3>Stats</h3>
-                    <!--  Winona, please add code for Accomplishments under this comment-->
-                </div>
-            </div>
+                    <div class="span5">
+                        <h3>My Shops</h3>
+                        <div class="w3-content w3-display-container">
+                            <img src="/Content/img/MyShops.png" />
+                        </div>
+                    </div>
 
     </div>
 </div>
