--- a/5051/Content/Student.css
+++ b/5051/Content/Student.css
@@ -122,6 +122,13 @@
     opacity: 0.7;
     padding: 10px;
     margin-top: 10px;
+    z-index: 0;
+}
+
+#shops {
+    position: center;
+    margin-top: -580px;
+    z-index: 2;
 }
 
 .mySlides {
