--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -53,9 +53,8 @@
                 <div id="Shops" class="w3-container city" style="display:none">
                     <div class="span5">
                         <h3>My Shops</h3>
-                        <img src="/Content/img/MyShops.png" />
                     </div>
-                    
+                    <img id="shops" src="/Content/img/MyShops.png" />
                 </div>
             </div>
 
