Update report page

--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -44,7 +44,7 @@
                     </div>
 
                     <div class="w3-content w3-display-container">
-                        <img class="shops" src="~/Content/img/YearChart.png" />
+                        <img class="shops" src="~/Content/img/YearChartCopy.png" />
                     </div>
                 </div>
             </div>
