--- a/5051/Content/Student.css
+++ b/5051/Content/Student.css
@@ -31,7 +31,7 @@
 #studentnavicons {
     position: absolute;
     left: 50%;
-    top: 18%;
+    top: 15%;
     font-size: calc(1.0vw + 1.0vh);
     transform: translate(-50%);
     z-index: 2;
@@ -67,33 +67,33 @@
     margin-top: 120px;
 }
 
+/*----------------Logout---------------*/
 .dog-container {
     position: relative;
-    margin-bottom: 600px;
+    margin-bottom: 550px;
 }
 
     .dog-container .dog {
         position: absolute;
         top: 10px;
-        left: 600px;
-        z-index: 1;
+        margin-left: 250px;
+        margin-right: auto;
+        z-index: 0;
     }
-
-#dog-block {
-    display: inline-block;
-}
 
 .speech-bubble {
     display: inline-block;
-    margin-right: 1000px;
+    margin-right: 800px;
     width: 400px;
+   
 }
 
 .speech-bubble2 {
-    display: none;
-    margin-left: 1000px;
+    margin-left: 1200px;
     width: 400px;
 }
+
+/*---------------Logout END-------------*/
 
 #market-pic {
     position: relative;
