Change button colors

--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -25,9 +25,9 @@
         <h2 align="center">My Report</h2>
         <div class="col-md-12">
             <div class="w3-bar">
-                <button class="w3-bar-item w3-button" onclick="openTab('Month')">Month</button>
-                <button class="w3-bar-item w3-button" onclick="openTab('Year')">Year</button>
-                <button class="w3-bar-item w3-button" onclick="openTab('Shops')">My Shops</button>
+                <button class="w3-bar-item w3-button w3-white" onclick="openTab('Month')">Month</button>
+                <button class="w3-bar-item w3-button w3-white" onclick="openTab('Year')">Year</button>
+                <button class="w3-bar-item w3-button w3-white" onclick="openTab('Shops')">My Shops</button>
             </div>
 
             <div class="col-md-12">
@@ -65,7 +65,7 @@
                     </div>
 
                     <div class="w3-content w3-display-container">
-                        <img class="shops" src="~/Content/img/MyShops.png" style="width: 780px;"/>
+                        <img class="shops" src="~/Content/img/MyShops.png" style="width: 780px; margin-left: 40px;"/>
                     </div>
                 </div>
             </div>
