--- a/5051/Views/Portal/Index.cshtml
+++ b/5051/Views/Portal/Index.cshtml
@@ -10,7 +10,7 @@
 
 <div class="background">
     <div class="row text-center">
-        <h2>WELCOME TO STUDENT PORTAL</h2>
+        <h2 class="student-index-h2">WELCOME TO STUDENT PORTAL</h2>
         <div class="col-md-6">
             <div>
                 <a href="~/Student/Report">
