--- a/5051/Views/Portal/Logout.cshtml
+++ b/5051/Views/Portal/Logout.cshtml
@@ -1,6 +1,5 @@
 
 @{
-    /**/
 
     ViewBag.Title = "Logout";
 }
@@ -23,9 +22,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script>
     $(function () {
+        $(".speech-bubble1").css("display", "none");
+        $(".speech-bubble1").delay(500).fadeIn(500);
         $(".speech-bubble2").css("display", "none");
         $(".speech-bubble2").delay(2000).fadeIn(500);
-        $(".speech-bubble2").css("display", "inline-block");
     });
 </script>
 
@@ -43,16 +43,9 @@
 
         <p class="student-text-medium">You are logged out!<br />Redirecting to login screen...</p>
         <div class="dog-container">
-            <img class="dog" id="dog-pic" src="~/Content/img/wasabi.png" />
             <img class="speech-bubble" id="dog-pic" src="~/Content/img/speech-bubble-blue.png" />
-
+            <img class="dog" id="dog-pic" src="~/Content/img/wasabi.png" />
             <img class="speech-bubble2" id="dog-pic" src="~/Content/img/speech-bubble-fab.png" />
         </div>
     </div>
 </div>
-
-<!--
-<h2>
-    @Html.ActionLink("Done", "Login", null, new { @class = "btn btn-primary" })
-</h2>
--->
