Home page intro, fixed logout

--- a/5051/Content/Student.css
+++ b/5051/Content/Student.css
@@ -10,7 +10,12 @@
 }
 
 .student-index-h2 {
-    margin-top: 100px;
+    margin-top: 50px;
+    color: #fff;
+}
+
+.my-progress-h2 {
+    margin-top: 50px;
     color: #fff;
 }
 
