--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "My Reports";
+    ViewBag.Title = "My Progress";
 }
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
@@ -18,11 +18,9 @@
     }
 </script>
 
-
-
 <div class="background">
     <div class="row text-center">
-        <h2 align="center">My Report</h2>
+        <h2 class="my-progress-h2" align="center">My Progress</h2>
         <div class="col-md-12">
             <div class="w3-bar">
                 <button class="w3-bar-item w3-button w3-white" onclick="openTab('Month')">Month</button>
@@ -68,9 +66,10 @@
                         <img class="shops" src="~/Content/img/MyShops.png" style="width: 780px; margin-left: 40px;"/>
                     </div>
                 </div>
-            </div>
+           </div>
+        </div>
     </div>
-
+</div>
 
 
   <script>
