--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -424,6 +424,32 @@ a.navbar-brand {
     height: auto;
 }
 
+/*-----------Intro Student, Admin, Kiosk pages----------*/
 
+.student-intro-h2 {
+    margin-top: 100px;
+    color: #fff;
+}
+
+.student-intro-container {
+    width: 650px;
+    margin: auto;
+}
+
+.student-intro-p {
+    margin-top: 20px;
+    margin-bottom:60px;
+    color:#ffffff;
+    font-size: 1.2em;
+}
+
+.progress-h3 {
+    margin-top: 50px;
+    color: #f39c12;
+}
+
+.game-h3 {
+    color: #76c2af;
+}
 
 
