--- a/5051/Views/Home/Index.cshtml
+++ b/5051/Views/Home/Index.cshtml
@@ -28,9 +28,9 @@
                 <div class="service-box">
                     <i class="fas fa-5x fa-file-alt" style="color:#b55d1e"></i>
                     <h3>Build Reports</h3>
-                    <p class="text-muted">Teacher attendance reports. <br />How to view and modify. </p>
+                    <p class="text-muted">Admin attendance reports. <br />How to view and modify. </p>
                     <p>
-                        @Html.ActionLink("Teacher Intro", "AdminIntro", "Home", null, new { @class = "btn btn-primary" })
+                        @Html.ActionLink("Admin Intro", "AdminIntro", "Home", null, new { @class = "btn btn-primary" })
                     </p>
                 </div>
             </div>
