--- a/5051/Views/Home/StudentIntro.cshtml
+++ b/5051/Views/Home/StudentIntro.cshtml
@@ -1,8 +1,25 @@
 ﻿@{
     ViewBag.Title = "Student Intro";
 }
-<h2>@ViewBag.Title.</h2>
 
-<p>What a student can find to do in the Student Portal. More coming soon.</p>
+<div class="row text-center">
+    <h2 class="student-intro-h2">@ViewBag.Title</h2>
 
+    <div class="student-intro-container">
+
+        <h3 class="progress-h3">Progress</h3>
+        <p class="student-intro-p">Students can check their progress in the <b>View Progress</b> 
+        section after logging in. They can check their total and average attendance hours, including their
+        best days and which days they were absent. These can be seen by month or year. They can also view
+        all the shops they made and visit/modify them if they wish.</p>
+
+        <h3 class="game-h3">Game</h3>
+        <p class="student-intro-p">Students can play a game in the <b>Play Game</b> section 
+        after logging in. They can see their own shop they made, visit the community to see other students'
+        shops, check out the marketplace to buy/sell items for their shop, and go to the avatar page to create 
+        or modify a new avatar. They can also logout from the game section if they wish.</p>
+
+    </div>
+
+</div>
 
