--- a/5051/Views/Portal/Index.cshtml
+++ b/5051/Views/Portal/Index.cshtml
@@ -17,7 +17,7 @@
                     <img style="margin-top: 80px" src="~/Content/img/ReportPicture.png" class="center">
                     <br />
                     <span style="display: block; text-align: center; font-size:2.5em; color: #fff;">
-                        View Reports
+                        View Progress
                     </span>
                 </a>
             </div>
