--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -426,17 +426,18 @@ a.navbar-brand {
 
 /*-----------Intro Student, Admin, Kiosk pages----------*/
 
-.student-intro-h2 {
+.intro-h2 {
     margin-top: 100px;
     color: #fff;
+    font-size: 3em;
 }
 
-.student-intro-container {
+.intro-container {
     width: 650px;
     margin: auto;
 }
 
-.student-intro-p {
+.intro-p {
     margin-top: 20px;
     margin-bottom:60px;
     color:#ffffff;
@@ -452,4 +453,15 @@ a.navbar-brand {
     color: #76c2af;
 }
 
+.manage-students-h3 {
+    margin-top: 50px;
+    color: #ba1010;
+}
 
+.override-calendar-h3 {
+    color: #f6871f;
+}
+
+.kiosk-h3 {
+    color: #68b2ee;
+}
