--- a/5051/Views/Home/AdminIntro.cshtml
+++ b/5051/Views/Home/AdminIntro.cshtml
@@ -3,24 +3,22 @@
 }
 
 <div class="row text-center">
-    <h2 class="student-intro-h2">@ViewBag.Title</h2>
+    <h2 class="intro-h2">@ViewBag.Title</h2>
 
-    <div class="student-intro-container">
+    <div class="intro-container">
 
-        <h3 class="progress-h3">Progress</h3>
-        <p class="student-intro-p">
-            Students can check their progress in the <b>View Progress</b>
-            section after logging in. They can check their total and average attendance hours, including their
-            best days and which days they were absent. These can be seen by month or year. They can also view
-            all the shops they made and visit/modify them if they wish.
+        <h3 class="manage-students-h3">Manage Students</h3>
+        <p class="intro-p">
+            Admins can manage their students in the <b>Manage Students</b> section after logging in.
+            They first choose a student avatar, then select a date range to view/edit their attendance.
+            From here they can switch to table view for editing, if needed. Reports can be saved to PDF and printed as well.
         </p>
 
-        <h3 class="game-h3">Game</h3>
-        <p class="student-intro-p">
-            Students can play a game in the <b>Play Game</b> section
-            after logging in. They can see their own shop they made, visit the community to see other students'
-            shops, check out the marketplace to buy/sell items for their shop, and go to the avatar page to create
-            or modify a new avatar. They can also logout from the game section if they wish.
+        <h3 class="override-calendar-h3">Override Calendar</h3>
+        <p class="intro-p">
+            Admins can override the usual school calendar in the <b>Override Calendar</b> section
+            for special holidays or unexpected time off like snow days. Admins can click on a day 
+            of the month and exempt this day from the students' total hours requirement.
         </p>
 
     </div>
