--- a/5051/Views/Home/AdminIntro.cshtml
+++ b/5051/Views/Home/AdminIntro.cshtml
@@ -9,7 +9,7 @@
 
         <h3 class="manage-students-h3">Manage Students</h3>
         <p class="intro-p">
-            Admins can manage their students in the <b>Manage Students</b> section after logging in.
+            Admins can manage their students in the <b>Manage Students</b> section after logging in from the <b>Admin</b> section.
             They first choose a student avatar, then select a date range to view/edit their attendance.
             From here they can switch to table view for editing, if needed. Reports can be saved to PDF and printed as well.
         </p>
