--- a/5051/Views/Home/KioskIntro.cshtml
+++ b/5051/Views/Home/KioskIntro.cshtml
@@ -8,7 +8,7 @@
 
         <h3 class="kiosk-h3">Kiosk Mode</h3>
         <p class="intro-p">
-            Students can login and out using the kiosk in the <b>Kiosk Mode</b> section.
+            Students can login and out using the kiosk from the <b>Kiosk Mode</b> section.
             Logging in or out earns them 100 points each. So for example, if a student
             logs in and out in the morning and afternoon, plus another login/logout around
             lunchtime, they will have earned 400 points for the day, to be spent in the student game
