--- a/5051/Views/Home/StudentIntro.cshtml
+++ b/5051/Views/Home/StudentIntro.cshtml
@@ -9,7 +9,7 @@
 
         <h3 class="progress-h3">Progress</h3>
         <p class="intro-p">Students can check their progress in the <b>View Progress</b> 
-            section after logging in. They can check their total and average attendance hours, including their
+            section after logging in from the <b>Student</b> section. They can check their total and average attendance hours, including their
             best days and which days they were absent. These can be seen by month or year. They can also view
             all the shops they made and visit/modify them if they wish.
         </p>
