CSS calendar page changed

--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -45,8 +45,9 @@
     padding-bottom: 20px;
 }
 
-#mainMenuCal{
+#mainMenuCal {
     text-align: right;
+    padding-top: 40px;
 }
 
 #mainAdminTitle {
