updated the list of files to be included

--- a/5051/Views/Kiosk/NewProfile.cshtml
+++ b/5051/Views/Kiosk/NewProfile.cshtml
@@ -6,8 +6,7 @@
 
 <div class="container-fluid" id="kioskbackground">
     
-    <div class="row">
-        <h2>Create a new profile.</h2>
+    <div class="row text-center"><h1>Create a new profile.</h1></div>
         <div class="kioskModule col-md-4 col-md-offset-4 col-sm-12">
 
             <div class="row">
