Final implementation: print and calendar features

--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -57,6 +57,7 @@
 
 #mainAdminTitleCal {
     color: #fff375;
+    margin-top: 10px;
 }
 
 
@@ -124,7 +125,7 @@
 
 #fitTitleText {
     padding-right: 0px;
-    width: 143px;
+    width: 143px;m
 }
 
 #fitInfoText {
