--- a/5051/Views/Admin/Calendar.cshtml
+++ b/5051/Views/Admin/Calendar.cshtml
@@ -5,37 +5,20 @@
 
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
-<!--Function to change calendar page-->
-<script>
-    function overrideCalendar() {
-        if (confirm("Confirm to override")) {
-            var img = document.getElementById("calendar");
-            img.src = "@Url.Content("~/Content/img/Admin Reports/calendar1.png")";
-            alert("System is set to take attendance on this day.");
-        } else {
-            return false;
-        }
-
-
-    }
-</script>
 
 <div id="background3">
-    <div class="row text-center">
+    <div id="adminCalendar"class="row text-center">
         <div class="container">
             <div id="mainMenuCal">
                 @Html.ActionLink("Main Menu", "Index", "Admin", null, new { @class = "btn btn-primary" })
             </div>
             <h2 id="mainAdminTitleCal">Welcome to Admin Calendar</h2>
-            <p id="mainAdminTitleCal">Click on calendar to override days to take or to not take attendance
-                
+            <p id="mainAdminTitleCal">Stay on track Seattle School District events and sync up with your
+                personal calendar
             </p>
-            <br />
-            <br />
-            <a href="#" onclick="overrideCalendar()">
-                <img id="calendar" src="~/Content/img/Admin Reports/calendar.png" width="700" />
-            </a>
             
+            <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffcccc&amp;src=hs4s4uas2tcgh3ui4sp7btdrt4%40group.calendar.google.com&amp;color=%230F4B38&amp;ctz=America%2FLos_Angeles" 
+                    style="border:solid 1px #777" width="900" height="600" frameborder="0" scrolling="no"></iframe>
 
         </div>
     </div>
