--- a/5051/Views/Admin/Index.cshtml
+++ b/5051/Views/Admin/Index.cshtml
@@ -26,7 +26,7 @@
                     <img style="margin-top: 80px;" src="~/Content/img/defaultCalendarIcon.png" class="center">
                     <br />
                     <span style="display: block; text-align: center; font-size:2.5em; color: #fff">
-                        Override Calendar
+                        Manage Calendar
                     </span>
                 </a>
             </div>
