--- a/5051/Content/PrintReport.css
+++ b/5051/Content/PrintReport.css
@@ -17,6 +17,7 @@
 
 #PrintHeader {
     padding-left: 60px;
+    padding-bottom: 20px;
     align-content: center;
     font-family: 'Ubuntu', sans-serif;
     font-size: 50px;
