--- a/5051/Views/Home/Index.cshtml
+++ b/5051/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <header class="masthead">
 
         <h1>Nova Town</h1>
-        <h3>Earn Points to update your avatar and stores, so you can build a great collection!</h3>
+        <h3>Don't go to school, come to school.</h3>
 
     </header>
 
